--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
 	},
 	"dependencies": {
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.48.4"
+		"react-native": "0.48.4",
+		"react-native-action-button": "^2.8.0",
+		"react-native-background-geolocation": "^2.9.4",
+		"react-native-camera": "^0.10.0",
+		"react-native-maps": "^0.16.4",
+		"react-native-swipe-gestures": "^1.0.2",
+		"react-native-swipeout": "^2.2.2",
+		"react-native-vector-icons": "^4.4.0"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
