game field logic & rendering a game friend based on a point work

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -133,6 +133,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-geo-fence')
     compile project(':react-native-vector-icons')
     compile project(':react-native-maps')
     compile project(':react-native-camera')
