--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"react-native-maps": "^0.16.4",
 		"react-native-swipe-gestures": "^1.0.2",
 		"react-native-swipeout": "^2.2.2",
-		"react-native-vector-icons": "^4.4.0"
+		"react-native-vector-icons": "^4.4.0",
+		"react-redux": "^5.0.6",
+		"redux": "^3.7.2"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
