--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-native-swipe-gestures": "^1.0.2",
 		"react-native-swipeout": "^2.2.2",
 		"react-native-vector-icons": "^4.4.0",
+		"react-navigation": "^1.0.0-beta.13",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2"
 	},
