--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"firebase": "^4.4.0",
+		"geolib": "^2.0.23",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.4",
 		"react-native-action-button": "^2.8.0",
