--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-navigation": "^1.0.0-beta.13",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "socket.io-client": "^2.0.3",
     "uuid-lib": "0.0.6"
   },
