--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "firebase": "^4.4.0",
     "geolib": "^2.0.23",
     "googleapis": "^22.2.0",
+    "native-base": "^2.3.2",
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.4",
     "react-native-action-button": "^2.8.0",
     "react-native-camera": "^0.10.0",
     "react-native-maps": "^0.16.4",
+    "react-native-modal": "^4.0.0",
     "react-native-swipe-gestures": "^1.0.2",
     "react-native-swipeout": "^2.2.2",
     "react-native-vector-icons": "^4.4.0",
