--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.48.4",
     "react-native-action-button": "^2.8.0",
     "react-native-camera": "^0.10.0",
+    "react-native-elements": "^0.17.0",
     "react-native-maps": "^0.16.4",
     "react-native-modal": "^4.0.0",
     "react-native-swipe-gestures": "^1.0.2",
