--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.captar"
     android:versionCode="1"
     android:versionName="1.0">
-
+    
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -35,6 +35,7 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCW_1Mq6Th0sMVOPLu-V7B5BLFi1nMkn0Y"/>
     </application>
 
 </manifest>
